Bug 204638 - Debug Launch in external console doesn't work
Summary: Debug Launch in external console doesn't work
Status: RESOLVED FIXED
Alias: None
Product: kdevplatform
Classification: Developer tools
Component: run support (other bugs)
Version First Reported In: git master
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
: 169402 214058 235335 236516 326282 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-08-21 11:41 UTC by jan.fostier
Modified: 2013-10-25 10:30 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jan.fostier 2009-08-21 11:41:30 UTC
Version:           3.9.94 (using KDevPlatform 0.9.95) (using 4.3.00 (KDE 4.3.0), 4.3.0-2.fc11 Fedora)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.29.6-217.2.3.fc11.x86_64

The description says it all.  The embedded console is used, regardless whether or not external console is checked in launch profile.
Comment 1 Andreas Pakulat 2009-08-21 12:31:50 UTC
I'm tempted to make this wishlist, but I guess thats a bit unfair since the option already exists in the GUI.
Comment 2 Andreas Pakulat 2009-11-11 09:22:59 UTC
*** Bug 214058 has been marked as a duplicate of this bug. ***
Comment 3 Andreas Pakulat 2009-11-17 00:04:57 UTC
this has been dropped for now as it won't happen in the first release.
Comment 4 Milian Wolff 2010-09-06 19:15:46 UTC
I think this is wanted by quite some people and would be easy to bring back. Just a lineedit with a command of the users choice, by default it would be:

konsole -e %app %appcommands

and %... would be replaced by what it says.

Than users could even pick their favorite konsole app.

So why was this removed?
Comment 5 Andreas Pakulat 2010-09-23 11:38:30 UTC
There was nothing removed anywhere. The fact is simply that nobody implemented the support for running in konsole.

I'm not sure what you're suggesting with a line-edit, unless I remember incorrectly the user can already choose application executable and provide cli-arguments in the launch config. So all that would be needed is making the checkbox work properly and eventually add a dropdown to allow other terminal emulators (which may need other commandline arguments to invoke an app in them).

Also doesn't it work choosing konsole (or another terminal emulator) as application and providing the necessary cli-arguments to it?
Comment 6 Milian Wolff 2010-09-23 16:47:27 UTC
launching in external terminal is now implemented in git master (i.e. for kdev 4.2). Debugging in external terminal is not implemented yet, someone with more knowledge of the code in stty.cpp needs to fix this.
Comment 7 Niko Sams 2011-12-30 20:04:49 UTC
*** Bug 236516 has been marked as a duplicate of this bug. ***
Comment 8 Niko Sams 2011-12-30 20:07:27 UTC
*** Bug 169402 has been marked as a duplicate of this bug. ***
Comment 9 Niko Sams 2012-01-15 17:45:10 UTC
*** Bug 235335 has been marked as a duplicate of this bug. ***
Comment 10 Vlas Puhov 2013-10-25 08:45:07 UTC
*** Bug 326282 has been marked as a duplicate of this bug. ***
Comment 11 Vlas Puhov 2013-10-25 10:30:49 UTC
Git commit 716724ddf5b170c62e0c274a62be3e15f392ef32 by Vlas Puhov.
Committed on 22/10/2013 at 19:33.
Pushed by vpuhov into branch 'master'.

Make it possible to debug from external terminals.

Currently supported: konsole, xterm, gnome-terminal and xfce4-terminal.

M  +10   -45   debuggers/gdb/stty.cpp
M  +3    -1    debuggers/gdb/stty.h

http://commits.kde.org/kdevelop/716724ddf5b170c62e0c274a62be3e15f392ef32