Make it possible to debug from external terminals.

Currently supported: konsole, xterm, gnome-terminal and xfce4-terminal.

BUG: 204638